@@ -309,6 +309,7 @@ end;
 structure OuterParse = Parse;
 structure OuterSyntax = Outer_Syntax;
 structure SpecParse = Parse_Spec;
+structure TypeInfer = Type_Infer;
 
 end;
 
